--- a/lib/user_service_web/templates/pow/session/new.html.eex
+++ b/lib/user_service_web/templates/pow/session/new.html.eex
@@ -22,3 +22,4 @@
 
 
 <span><%= link "Register", to: Routes.pow_registration_path(@conn, :new) %></span>
+<span><%= link "Reset password", to: Routes.pow_reset_password_reset_password_path(@conn, :new) %>
