--- a/lib/user_service_web/templates/pow/registration/new.html.eex
+++ b/lib/user_service_web/templates/pow/registration/new.html.eex
@@ -8,15 +8,15 @@
   <% end %>
 
   <%= label f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-  <%= text_input f, Pow.Ecto.Schema.user_id_field(@changeset) %>
+  <%= text_input f, Pow.Ecto.Schema.user_id_field(@changeset), value: "new#{:rand.uniform(99999999999)}@new.com" %>
   <%= error_tag f, Pow.Ecto.Schema.user_id_field(@changeset) %>
 
   <%= label f, :password %>
-  <%= password_input f, :password %>
+  <%= password_input f, :password, value: "password" %>
   <%= error_tag f, :password %>
 
   <%= label f, :password_confirmation %>
-  <%= password_input f, :password_confirmation %>
+  <%= password_input f, :password_confirmation, value: "password" %>
   <%= error_tag f, :password_confirmation %>
 
   <div>
