More email things

--- a/lib/user_service_web/templates/pow_reset_password/mailer/reset_password.html.eex
+++ b/lib/user_service_web/templates/pow_reset_password/mailer/reset_password.html.eex
@@ -1,4 +1,7 @@
-<%= content_tag(:h3, "Hi,") %>
-<%= content_tag(:p, "Please use the following link to reset your password:") %>
-<%= content_tag(:p, link(@url, to: @url)) %>
-<%= content_tag(:p, "You can disregard this email if you didn't request a password reset.") %>
+<p>Hi,</p>
+
+<p>You can reset your password using <%= link("this link", to: @url) %>. If you didn't request a password reset, then please disregard this email.</p>
+
+<p>If you have any questions, you can reply to this email and we'll get back to you!</p>
+
+<p>Thanks!<br />The Team at APP_NAME</p>
