--- a/lib/user_service_web/templates/pow_reset_password/mailer/reset_password.text.eex
+++ b/lib/user_service_web/templates/pow_reset_password/mailer/reset_password.text.eex
@@ -1,7 +1,10 @@
 Hi,
 
-Please use the following link to reset your password:
+You can reset your password using the following link. If you didn't request a password reset, then please disregard this email.
 
 <%= @url %>
 
-You can disregard this email if you didn't request a password reset.
+If you have any questions, you can reply to this email and we'll get back to you!
+
+Thanks!
+The Team at APP_NAME
