--- a/lib/user_service_web/templates/placeholder/show.html.eex
+++ b/lib/user_service_web/templates/placeholder/show.html.eex
@@ -1,5 +1,5 @@
 <h1>Placeholder</h1>
 
-<pre><%= inspect Pow.Plug.current_user(@conn) %></pre>
+<pre style="white-space: pre-wrap;"><%= inspect Pow.Plug.current_user(@conn) %></pre>
 
 <%= link "Log Out", to: Routes.logout_path(@conn, :delete) %>
