--- a/lib/user_service_web/templates/pow/session/new.html.eex
+++ b/lib/user_service_web/templates/pow/session/new.html.eex
@@ -1,25 +1,41 @@
-<h1>Sign in</h1>
-
-<%= form_for @changeset, @action, [as: :user], fn f -> %>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
+<div class="card shadow border-0">
+  <div class="row">
+    <div class="col-sm login-container-padding bg-primary text-white">
+      <h2>Welcome to ThingCorp</h2>
+      <p>We help you do things—You are going to get so much done.</p>
     </div>
-  <% end %>
 
-  <%= label f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-  <%= text_input f, Pow.Ecto.Schema.user_id_field(@changeset), value: "a@a.com" %>
-  <%= error_tag f, Pow.Ecto.Schema.user_id_field(@changeset) %>
+    <div class="col-sm login-container-padding">
+      <%= if get_flash(@conn, :info) do %>
+        <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+      <% end %>
 
-  <%= label f, :password %>
-  <%= password_input f, :password, value: "password" %>
-  <%= error_tag f, :password %>
+      <%= if get_flash(@conn, :error) do %>
+        <p class="alert alert-warning" role="alert"><%= get_flash(@conn, :error) %></p>
+      <% end %>
 
-  <div>
-    <%= submit "Sign in" %>
+      <%= form_for @changeset, @action, [as: :user], fn f -> %>
+        <div class="form-group">
+          <%= label f, Pow.Ecto.Schema.user_id_field(@changeset) %>
+          <%= text_input f, Pow.Ecto.Schema.user_id_field(@changeset), value: "a@a.com", class: "form-control" %>
+          <%= error_tag f, Pow.Ecto.Schema.user_id_field(@changeset) %>
+        </div>
+
+        <div class="form-group">
+          <%= label f, :password %>
+          <%= password_input f, :password, value: "password", class: "form-control" %>
+          <%= error_tag f, :password %>
+        </div>
+
+        <div class="btn-group w-100">
+          <%= submit "Sign in", class: "btn btn-primary w-50" %>
+          <%= link "Sign up", to: Routes.pow_registration_path(@conn, :new), class: "btn btn-primary btn-light w-50" %>
+        </div>
+      <% end %>
+
+      <div class="text-center mt-3">
+        <%= link "Forgot password?", to: Routes.pow_reset_password_reset_password_path(@conn, :new) %>
+      </div>
+    </div>
   </div>
-<% end %>
-
-
-<span><%= link "Register", to: Routes.pow_registration_path(@conn, :new) %></span>
-<span><%= link "Reset password", to: Routes.pow_reset_password_reset_password_path(@conn, :new) %>
+</div>
