--- a/lib/user_service_web/templates/pow_reset_password/reset_password/new.html.eex
+++ b/lib/user_service_web/templates/pow_reset_password/reset_password/new.html.eex
@@ -1,18 +1,27 @@
-<h1>Reset password</h1>
-
-<%= form_for @changeset, @action, [as: :user], fn f -> %>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
-
-  <%= label f, :email %>
-  <%= text_input f, :email %>
-  <%= error_tag f, :email %>
-
-  <div>
-    <%= submit "Submit" %>
+<div class="card-group">
+  <div class="card shadow border-0 bg-primary text-white card-padded">
+    <h2>Reset your password</h2>
+    <p>We'll confirm your email and then you can set a new password.</p>
   </div>
-<% end %>
 
+  <div class="card card-padded shadow border-0">
+    <%= form_for @changeset, @action, [as: :user], fn f -> %>
+      <%= if @changeset.action do %>
+        <div class="alert alert-danger">
+          <p>Oops, something went wrong! Please check the errors below.</p>
+        </div>
+      <% end %>
+
+      <div class="form-group">
+        <%= label f, :email, class: invalid_class(f, :email) %>
+        <%= text_input f, :email, class: "form-control #{invalid_class(f, :email)}", required: true %>
+        <%= error_tag f, :email %>
+      </div>
+
+      <div class="btn-group w-100">
+        <%= submit "Send email", class: "btn btn-primary w-50" %>
+        <%= link "Cancel", to: Routes.pow_session_path(@conn, :new), class: "btn btn-light w-50" %>
+      </div>
+    <% end %>
+  </div>
+</div>
