--- a/lib/user_service_web/templates/pow_reset_password/reset_password/edit.html.eex
+++ b/lib/user_service_web/templates/pow_reset_password/reset_password/edit.html.eex
@@ -1,24 +1,27 @@
-<h1>Reset password</h1>
-
-<%= form_for @changeset, @action, [as: :user], fn f -> %>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
-
-  <%= label f, :password %>
-  <%= password_input f, :password %>
-  <%= error_tag f, :password %>
-
-  <%= label f, :password_confirmation %>
-  <%= password_input f, :password_confirmation %>
-  <%= error_tag f, :password_confirmation %>
-
-  <div>
-    <%= submit "Submit" %>
+<div class="card-group">
+  <div class="card shadow border-0 bg-primary text-white card-padded">
+    <h2>Reset your password</h2>
+    <p>All that's left is to set your new password.</p>
   </div>
-<% end %>
 
+  <div class="card card-padded shadow border-0">
+    <%= form_for @changeset, @action, [as: :user, method: :put], fn f -> %>
+      <div class="form-group">
+        <%= label f, :password, class: invalid_class(f, :password) %>
+        <%= password_input f, :password, class: "form-control #{invalid_class(f, :password)}" %>
+        <%= error_tag f, :password %>
+      </div>
 
-<span><%= link "Sign in", to: Routes.pow_session_path(@conn, :new) %></span>
+      <div class="form-group">
+        <%= label f, :password_confirmation, class: invalid_class(f, :password_confirmation) %>
+        <%= password_input f, :password_confirmation, class: "form-control #{invalid_class(f, :password_confirmation)}" %>
+        <%= error_tag f, :password_confirmation %>
+      </div>
+
+      <div class="btn-group w-100">
+        <%= submit "Reset password", class: "btn btn-primary w-50" %>
+        <%= link "Cancel", to: Routes.pow_session_path(@conn, :new), class: "btn btn-light w-50" %>
+      </div>
+    <% end %>
+  </div>
+</div>
