--- a/lib/user_service_web/templates/placeholder/show.html.eex
+++ b/lib/user_service_web/templates/placeholder/show.html.eex
@@ -1,5 +1,16 @@
-<h1>Placeholder</h1>
+<div class="card-group">
+  <div class="card shadow border-0 bg-primary card-padded">
+    <h2 class="text-white mb-4">Welcome</h2>
 
-<pre style="white-space: pre-wrap;"><%= inspect Pow.Plug.current_user(@conn) %></pre>
+    <a class="btn btn-lg btn-light" href="http://test.localhost.development:4001/">Continue to App</a>
+  </div>
 
-<%= link "Log Out", to: Routes.logout_path(@conn, :delete) %>
+  <div class="card card-padded shadow border-0">
+    <!--<pre style="white-space: pre-wrap;"><%= inspect Pow.Plug.current_user(@conn) %></pre>-->
+
+    <p>You're logged in as <%= Pow.Plug.current_user(@conn).email %>.</p>
+
+    <%= link "Update Info", to: Routes.pow_registration_path(@conn, :edit) %>
+    <%= link "Log Out", to: Routes.logout_path(@conn, :delete) %>
+  </div>
+</div>
