--- a/lib/user_service_web/templates/pow/registration/edit.html.eex
+++ b/lib/user_service_web/templates/pow/registration/edit.html.eex
@@ -1,35 +1,46 @@
-<h1>Edit profile</h1>
-
-<%= form_for @changeset, @action, [as: :user], fn f -> %>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
-
-  <%= label f, :current_password %>
-  <%= password_input f, :current_password %>
-  <%= error_tag f, :current_password %>
-
-  <%= label f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-  <%= text_input f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-  <%= error_tag f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-
-  <%= if @changeset.data.unconfirmed_email do %>
-    <div>
-      <p>Click the link in the confirmation email to change your email to <%= content_tag(:span, @changeset.data.unconfirmed_email) %>.</p>
-    </div>
-  <% end %>
-
-  <%= label f, :password %>
-  <%= password_input f, :password %>
-  <%= error_tag f, :password %>
-
-  <%= label f, :password_confirmation %>
-  <%= password_input f, :password_confirmation %>
-  <%= error_tag f, :password_confirmation %>
-
-  <div>
-    <%= submit "Update" %>
+<div class="card-group">
+  <div class="card shadow border-0 bg-primary text-white card-padded">
+    <h2>Edit Your Info</h2>
+    <p>You can update your login and personal information here.</p>
   </div>
-<% end %>
+
+  <div class="card card-padded shadow border-0">
+    <%= form_for @changeset, @action, [as: :user], fn f -> %>
+
+      <div class="form-group">
+        <%= label f, :current_password, "Current password *", class: invalid_class(f, :current_password) %>
+        <%= password_input f, :current_password, class: "form-control #{invalid_class(f, :current_password)}", required: true %>
+        <%= error_tag f, :current_password %>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :email, "Email *", class: invalid_class(f, :email) %>
+        <%= text_input f, :email, class: "form-control #{invalid_class(f, :email)}" %>
+        <%= error_tag f, :email %>
+      </div>
+
+      <%= if @changeset.data.unconfirmed_email do %>
+        <p class="alert alert-info">
+          Click the link in the confirmation email to change your email to <%= content_tag(:span, @changeset.data.unconfirmed_email) %>.
+        </p>
+      <% end %>
+
+      <div class="form-group">
+        <%= label f, :password, "Password (if you want to change it)", class: invalid_class(f, :password) %>
+        <%= password_input f, :password, value: "password", class: "form-control #{invalid_class(f, :password)}" %>
+        <%= error_tag f, :password %>
+      </div>
+
+      <div class="form-group">
+        <%= label f, :password_confirmation, "Password confirmation (if changing)", class: invalid_class(f, :password_confirmation) %>
+        <%= password_input f, :password_confirmation, value: "password", class: "form-control #{invalid_class(f, :password_confirmation)}" %>
+        <%= error_tag f, :password_confirmation %>
+      </div>
+
+      <div class="btn-group w-100">
+        <%= submit "Update", class: "btn btn-primary w-50" %>
+        <%= link "Cancel", to: Routes.pow_session_path(@conn, :new), class: "btn btn-light w-50" %>
+      </div>
+    <% end %>
+  </div>
+</div>
