--- a/lib/user_service_web/templates/pow/registration/edit.html.eex
+++ b/lib/user_service_web/templates/pow/registration/edit.html.eex
@@ -25,15 +25,29 @@
         </p>
       <% end %>
 
+      <div class="form-row">
+        <div class="col-md form-group">
+          <%= label f, :first_name, class: invalid_class(f, :first_name) %>
+          <%= text_input f, :first_name, class: "form-control #{invalid_class(f, :first_name)}" %>
+          <%= error_tag f, :first_name %>
+        </div>
+
+        <div class="col-md form-group">
+          <%= label f, :last_name, class: invalid_class(f, :last_name) %>
+          <%= text_input f, :last_name, class: "form-control #{invalid_class(f, :last_name)}" %>
+          <%= error_tag f, :last_name %>
+        </div>
+      </div>
+
       <div class="form-group">
         <%= label f, :password, "Password (if you want to change it)", class: invalid_class(f, :password) %>
-        <%= password_input f, :password, value: "password", class: "form-control #{invalid_class(f, :password)}" %>
+        <%= password_input f, :password, class: "form-control #{invalid_class(f, :password)}" %>
         <%= error_tag f, :password %>
       </div>
 
       <div class="form-group">
         <%= label f, :password_confirmation, "Password confirmation (if changing)", class: invalid_class(f, :password_confirmation) %>
-        <%= password_input f, :password_confirmation, value: "password", class: "form-control #{invalid_class(f, :password_confirmation)}" %>
+        <%= password_input f, :password_confirmation, class: "form-control #{invalid_class(f, :password_confirmation)}" %>
         <%= error_tag f, :password_confirmation %>
       </div>
 
