Implement Pow Assent for Github / SalesLoft as demo of different social logins

--- a/lib/user_service_web/templates/pow/session/new.html.eex
+++ b/lib/user_service_web/templates/pow/session/new.html.eex
@@ -33,5 +33,9 @@
     <div class="text-center mt-3">
       <%= link "Forgot password?", to: Routes.pow_reset_password_reset_password_path(@conn, :new) %>
     </div>
+
+    <%= for link <- PowAssent.Phoenix.ViewHelpers.provider_links(@conn) do %>
+      <%= content_tag(:span, link) %>
+    <% end %>
   </div>
 </div>
