--- a/lib/user_service_web/templates/pow_assent/registration/add_user_id.html.eex
+++ b/lib/user_service_web/templates/pow_assent/registration/add_user_id.html.eex
@@ -4,34 +4,17 @@
     <p>We weren't able to sign you in <%= provider_message(@conn) %></p>
   </div>
 
-  <%= if email_taken?(@changeset) do %>
-    <div class="card shadow border-0 card-padded">
+  <div class="card shadow border-0 card-padded">
+    <%= if email_taken?(@changeset) do %>
       <p>We could not verify that your account is configured to use this login provider.</p>
-      <p>
-        Please <%= link("login", to: Routes.login_path(@conn, :new)) %> with your email and password, or with a
-        different provider. You can always <%= link "reset your password", to: Routes.pow_reset_password_reset_password_path(@conn, :new) %>
-        if you forgot it.
-      </p>
-    </div>
-  <% else %>
-    <div class="card shadow border-0 card-padded">
-      <%= form_for @changeset, @action, [as: :user], fn f -> %>
-        <%= if @changeset.action do %>
-          <div class="alert alert-danger">
-            <p>Oops, something went wrong! Please check the errors below.</p>
-          </div>
-        <% end %>
+    <% else %>
+      <p>We can not log you in using this login provider.</p>
+    <% end %>
 
-        <%= inspect @changeset %>
-
-        <%= label f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-        <%= text_input f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-        <%= error_tag f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-
-        <div>
-          <%= submit "Submit" %>
-        </div>
-      <% end %>
-    </div>
-  <% end %>
+    <p>
+      Please <%= link("login", to: Routes.login_path(@conn, :new)) %> with your email and password, or with a
+      different provider. You can <%= link "reset your password", to: Routes.pow_reset_password_reset_password_path(@conn, :new) %>
+      if you forgot it.
+    </p>
+  </div>
 </div>
