--- a/lib/user_service_web/templates/pow_totp/setup/edit.html.eex
+++ b/lib/user_service_web/templates/pow_totp/setup/edit.html.eex
@@ -5,5 +5,11 @@
   </div>
 
   <div class="card card-padded shadow border-0">
+    <p>Removing 2FA reduces the security of your account. Take care when removing it.</p>
+
+    <div class="btn-group w-100">
+      <%= link("Remove 2FA", to: Routes.pow_totp_setup_path(@conn, :delete), method: :delete, class: "btn btn-danger w-50") %>
+      <%= link "Cancel", to: Routes.pow_registration_path(@conn, :edit), class: "btn btn-light w-50" %>
+    </div>
   </div>
 </div>
