--- a/lib/user_service_web/templates/placeholder/show.html.eex
+++ b/lib/user_service_web/templates/placeholder/show.html.eex
@@ -12,7 +12,8 @@
   <div class="card card-padded shadow border-0">
     <p>You're logged in as <%= Pow.Plug.current_user(@conn).email %></p>
 
-    <%= link "Update Info", to: Routes.pow_registration_path(@conn, :edit) %>
+    <%= link "Edit Your Info", to: Routes.pow_registration_path(@conn, :edit) %>
+    <%= link "Invite Your Teammates", to: Routes.pow_invitation_invitation_path(@conn, :new) %>
     <%= link "Log Out", to: Routes.logout_path(@conn, :delete) %>
   </div>
 </div>
